--- a/Tp1/Views/Shared/_FilmInfoPartial.cshtml
+++ b/Tp1/Views/Shared/_FilmInfoPartial.cshtml
@@ -3,11 +3,11 @@
 <div class="col-5">
     <form asp-controller="Films" asp-action="Details" method="post">
         <input type="hidden" name="id" value="@Model.Id" />
-        @if (Model.DateSortie.Year <= 2005)
+        @if (Model.DateSortie.Year <= 2012)
         {
-            <button type="submit">
-                <div class="card mb-3 bg-danger" style="max-width: 540px;">
-                    <div class="row no-gutters">
+            <button type="submit" class="w-100 h-100">
+                <div class="card bg-danger w-100 h-100">
+                    <div class="row m-0 h-100">
                         <div class="col-md-5 d-flex align-items-center">
                             <img src=@Model.CheminImage class="card-img" alt="Card image cap">
                         </div>
@@ -25,9 +25,9 @@
         }
         else
         {
-            <button type="submit">
-                <div class="card mb-3" style="max-width: 540px;">
-                    <div class="row no-gutters">
+            <button type="submit" class="w-100 h-100">
+                <div class="card w-100 h-100">
+                    <div class="row m-0 h-100">
                         <div class="col-md-5 d-flex align-items-center">
                             <img src=@Model.CheminImage class="card-img" alt="Card image cap">
                         </div>
